<resources>
    <string name="app_name">SAAM</string>
    <string name="saam_logo">SAAM logo</string>
    <string name="obrok">obrok</string>
    <string name="stehtajte">Stehtajte</string>
    <string name="weighttext">0 g</string>
    <string name="tare">Tara</string>
    <string name="tare_icon">tare icon</string>
    <string name="btn_potrdi">Potrdi</string>
    <string name="pass_dialog_hint">Geslo</string>
    <string name="pass_dialog_text">Vnesite geslo tehtnice</string>
    <string name="pass_dialog_btn_back">Nazaj</string>
    <string name="pass_dialog_btn_confirm">Potrdi</string>
    <string name="weight_battery_nan">NaN</string>
    <string name="btn_take_photo">Slikaj</string>
    <string name="slikajte">Slikajte</string>
    <string name="back_button">back button</string>
    <string name="info_button">info button</string>
    <string name="captured_image_preview">captured image preview</string>
    <string name="photo_confirm_text">Potrdi</string>
    <string name="meal_contents_text_1">Označite,</string>
    <string name="txt_dairy">Mlečne\nizdelke</string>
    <string name="description_dairy">Dairy</string>
    <string name="txt_eggs">Jajca</string>
    <string name="description_txt">Choosable image</string>
    <string name="info_text1">Vklopite</string>
    <string name="info_text2">tehtnico</string>
    <string name="info1">1.)</string>
    <string name="info11">Lorem ipsum dolor sit\namet, consect etur</string>
    <string name="end1">Dober tek!</string>
    <string name="scale_select_text_1">Povezovanje</string>
    <string name="settings_text_1">Nastavitve</string>
    <string name="settings_text_2">Oznaka uporabnika</string>
    <string name="settings_text_4">Pozabi tehtnico</string>
    <string name="meal_contents_text_2">ali obrok vsebuje\nvir beljakovin:</string>
    <string name="mlecni_izdelek">Mlečne\nizdelke</string>
    <string name="meso">Meso</string>
    <string name="ribe">Ribe</string>
    <string name="strocnice">Stročnice</string>
    <string name="ne_vsebuje">Ne vsebuje</string>
</resources>