<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llcPhoto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:weightSum="1"
    tools:context=".TakePhoto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slikajte"
            android:textSize="39sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensansregular"
            android:textColor="@color/fontColor"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obrok"
            android:textSize="17sp"
            android:fontFamily="@font/opensanssemibold"
            android:textColor="@color/fontColor"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <ImageView
            android:id="@+id/ivTakenPicture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_launcher_background"
            android:contentDescription="@string/captured_image_preview"/>

        <TextureView
            android:id="@+id/tvPhoto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back"
            android:onClick="backClicked"
            android:contentDescription="@string/back_button"
            android:padding="10dp"/>

        <Space
            android:layout_width="40dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/opensansregular"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:text="@string/btn_take_photo"
            android:onClick="clickedTakePhoto"/>

        <Space
            android:layout_width="40dp"
            android:layout_height="0dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_info"
            android:padding="10dp"
            android:contentDescription="@string/info_button"
            android:onClick="onInfoClick"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>