<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:padding="5dp">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/fontColor"
        android:fontFamily="@font/opensansregular"
        android:textSize="25sp"
        android:text="@string/pass_dialog_text" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/fontColor"
        android:fontFamily="@font/opensansregular"
        android:gravity="center"
        android:textSize="25sp"
        android:hint="@string/pass_dialog_hint"
        android:inputType="numberPassword"
        android:autofillHints="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1">


        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:textSize="25sp"
            android:textColor="@color/green"
            android:fontFamily="@font/opensansregular"
            android:textAllCaps="false"
            android:layout_margin="5dp"
            android:text="@string/pass_dialog_btn_back" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:textSize="25sp"
            android:textColor="@color/green"
            android:fontFamily="@font/opensansregular"
            android:textAllCaps="false"
            android:layout_margin="5dp"
            android:text="@string/pass_dialog_btn_confirm" />
    </LinearLayout>


</LinearLayout>