<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".Info">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/info_text1"
      android:textSize="39sp"
      android:layout_marginTop="10dp"
      android:fontFamily="@font/opensansregular"
      android:textColor="@color/fontColor"
      android:gravity="center"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/info_text2"
      android:textSize="17sp"
      android:fontFamily="@font/opensanssemibold"
      android:textColor="@color/fontColor"
      android:gravity="center"/>

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="70dp"
      android:layout_height="70dp"
      android:layout_marginTop="120dp"
      android:layout_gravity="center"
      app:srcCompat="@drawable/ic_weight_tare" />

  <Space
      android:layout_width="0dp"
      android:layout_height="90dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info1"
        android:layout_marginEnd="20dp"
        android:textSize="17sp"
        android:textColor="@color/fontColor"
        android:fontFamily="@font/opensanssemibold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info11"
        android:textSize="17sp"
        android:textColor="@color/fontColor"
        android:fontFamily="@font/opensanssemibold"/>
  </LinearLayout>

  <Space
      android:layout_width="0dp"
      android:layout_height="30dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info1"
        android:layout_marginEnd="20dp"
        android:textSize="17sp"
        android:textColor="@color/fontColor"
        android:fontFamily="@font/opensanssemibold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info11"
        android:textSize="17sp"
        android:textColor="@color/fontColor"
        android:fontFamily="@font/opensanssemibold"/>
  </LinearLayout>

  <Space
      android:layout_width="0dp"
      android:layout_height="30dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info1"
        android:layout_marginEnd="20dp"
        android:textSize="17sp"
        android:textColor="@color/fontColor"
        android:fontFamily="@font/opensanssemibold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info11"
        android:textSize="17sp"
        android:textColor="@color/fontColor"
        android:fontFamily="@font/opensanssemibold"/>
  </LinearLayout>

</LinearLayout>